--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+   <link rel="stylesheet" href="css/style.css">
    <title>Insight</title>
 </head>
 <body>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque aut quidem, fuga vero asperiores aperiam, nemo fugiat reprehenderit rem, id rerum ratione quaerat, obcaecati voluptates perspiciatis esse libero. Sunt, ut.
 </body>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+<script type="text/javascript" href="js/script.js"></script>
 </html>
