jQuery CDN added

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque aut quidem, fuga vero asperiores aperiam, nemo fugiat reprehenderit rem, id rerum ratione quaerat, obcaecati voluptates perspiciatis esse libero. Sunt, ut.
 </body>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" href="js/script.js"></script>
 </html>
