Commited arrow nav changes

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       </div>
       <div class="row rules text">
          <ul class="nav">
-            <li class="nav-item bla"><i class="fa fa-arrow-right rotate"></i>10 Weeks</li>
-            <li class="nav-item bla"><i class="fa fa-arrow-right rotate"></i>10 Designers</li>
-            <li class="nav-item bla"><i class="fa fa-arrow-right rotate"></i>10 Disposable Cameras</li>
-            <li class="nav-item bla"><i class="fa fa-arrow-right rotate"></i>22 Photo Guidelines</li>
+            <li class="nav-item"><i class="fa fa-arrow-right rotate"></i>10 Weeks</li>
+            <li class="nav-item"><i class="fa fa-arrow-right rotate"></i>10 Designers</li>
+            <li class="nav-item"><i class="fa fa-arrow-right rotate"></i>10 Disposable Cameras</li>
+            <li class="nav-item"><i class="fa fa-arrow-right rotate"></i>22 Photo Guidelines</li>
 
          </ul>
       </div>
