Edited mobile nav

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                <i class="arrow" id="js-arrow"></i>Rules
             </a>
          </li>
-         <li class="nav-item top-bar"">
+         <li class="nav-item top-bar">
             <a class=" insights nav-link" href="#">
             <i class="arrow" id="js-arrow"></i>Insights
             </a>
@@ -35,7 +35,7 @@
    </div>
 
 
-   <div class="navbar navbar-fixed-top right">
+   <div class="navbar navbar-fixed-top right logo">
       <ul class="nav nav-stacked flex-column ">
          <li class="nav-item insight">Insight.</li>
          <li class="nav-item year">2018</li>
