Insight page created and menu styled for mob and desktop

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 <body>
    <!-- Navigation -->
    <div class="navbar navbar-fixed-top main">
-      <ul class="nav  nav-stacked flex-column">
+      <ul class="nav nav-stacked flex-column">
          <li class="nav-item active top-bar ">
-            <a class="rules nav-link" href="#">
+            <a class="rules nav-link" href="index.html">
                <i class="arrow" id="js-arrow"></i>Rules
             </a>
          </li>
          <li class="nav-item top-bar">
-            <a class=" insights nav-link" href="#">
+            <a class=" insights nav-link" href="insights.html">
             <i class="arrow" id="js-arrow"></i>Insights
             </a>
          </li>
