add video to site + start on nav

--- a/index.html
+++ b/index.html
@@ -2,35 +2,49 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <meta name="description" content="">
+   <meta name="author" content="">
+
+   <title>Invision</title>
+
+   <!--CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
       integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
    <link rel="stylesheet" href="css/style.css">
-   <title>Insight</title>
+
 </head>
 
 <body>
-   <div class="container">
-      <h1>Insight</h1>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque aut quidem, fuga vero asperiores aperiam, nemo
-      fugiat reprehenderit rem, id rerum ratione quaerat, obcaecati voluptates perspiciatis esse libero. Sunt, ut.
 
+   <!-- Navigation -->
+   <div class="navbar navbar-fixed-top">
+      <ul class="nav nav-pills nav-stacked flex-column">
+         <li class="nav-item"><a class="rules nav-link active" href="#">Rules</a></li>
+         <li class="nav-item"><a class="insights nav-link" href="#">Insights</a></li>
+      </ul>
    </div>
+   </div>
+   <!-- Page Content -->
+   <div class="container">
+      <div class="row">
+         <video preload="" controls="controls" width="100%" height="100%">
+            <source src="assets/vid/main.mp4" />
+         </video>
+      </div>
+      <div class="row text">
+         <h3>Insight explores the trajectory between design education and professional practice.<br />
+            This platform serves as a collaborative collection of photographic and written insights', that document
+            some of the underlying social factors shaping the design industry today, by the people that make it.</p>
+      </div>
 
 
+      <!-- Bootstrap core JavaScript -->
+      <script src="js/jquery/jquery.slim.min.js"></script>
+      <script src="js/jquery/bootstrap.bundle.min.js"></script>
 
-
-
-
-
-
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-      integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-      crossorigin="anonymous"></script>
-   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-   <script type="text/javascript" href="js/script.js"></script>
 </body>
 
 </html>
