add nav bar stuff + text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <meta name="description" content="">
-   <meta name="author" content="">
+   <meta name="author" content="Hannahs and Katie">
 
    <title>Invision</title>
 
@@ -18,14 +18,18 @@
 </head>
 
 <body>
-
    <!-- Navigation -->
    <div class="navbar navbar-fixed-top">
-      <ul class="nav nav-pills nav-stacked flex-column">
+      <ul class="nav  nav-stacked flex-column">
          <li class="nav-item"><a class="rules nav-link active" href="#">Rules</a></li>
          <li class="nav-item"><a class="insights nav-link" href="#">Insights</a></li>
       </ul>
    </div>
+   <div class="navbar navbar-fixed-top right">
+      <ul class="nav nav-stacked flex-column ">
+         <li class="nav-item">Insight.</li>
+         <li class="nav-item">2018</li>
+      </ul>
    </div>
    <!-- Page Content -->
    <div class="container">
@@ -35,15 +39,16 @@
          </video>
       </div>
       <div class="row text">
-         <h3>Insight explores the trajectory between design education and professional practice.<br />
+         <h3>Insight explores the trajectory between design education and professional practice.<br /><br />
             This platform serves as a collaborative collection of photographic and written insights', that document
             some of the underlying social factors shaping the design industry today, by the people that make it.</p>
       </div>
+   </div>
 
 
-      <!-- Bootstrap core JavaScript -->
-      <script src="js/jquery/jquery.slim.min.js"></script>
-      <script src="js/jquery/bootstrap.bundle.min.js"></script>
+   <!-- Bootstrap core JavaScript -->
+   <script src="js/jquery/jquery.slim.min.js"></script>
+   <script src="js/jquery/bootstrap.bundle.min.js"></script>
 
 </body>
 
