add arrow to nav

--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
    <!-- Navigation -->
    <div class="navbar navbar-fixed-top">
       <ul class="nav  nav-stacked flex-column">
-         <li class="nav-item"><a class="rules nav-link active" href="#">Rules</a></li>
+         <li class="nav-item"><a class="rules nav-link active" href="#">
+               <div class="arrow"></div>Rules
+            </a></li>
          <li class="nav-item"><a class="insights nav-link" href="#">Insights</a></li>
       </ul>
    </div>
    <div class="navbar navbar-fixed-top right">
       <ul class="nav nav-stacked flex-column ">
-         <li class="nav-item">Insight.</li>
-         <li class="nav-item">2018</li>
+         <li class="nav-item insight">Insight.</li>
+         <li class="nav-item year">2018</li>
       </ul>
    </div>
    <!-- Page Content -->
