--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
    <!-- Navigation -->
    <div class="navbar navbar-fixed-top">
       <ul class="nav  nav-stacked flex-column">
-         <li class="nav-item"><a class="rules nav-link active" href="#">
-               <div class="arrow"></div>Rules
+         <li class="nav-item" id="js-nav-item"><a class="rules nav-link active" href="#">
+               <div class="arrow" id="js-arrow"></div>Rules
             </a></li>
-         <li class="nav-item"><a class="insights nav-link" href="#">Insights</a></li>
+         <li class="nav-item" id="js-nav-item"><a class="insights nav-link" href="#">
+               <div class="arrow" id="js-arrow"></div>Insights
+            </a></li>
       </ul>
    </div>
    <div class="navbar navbar-fixed-top right">
@@ -51,6 +53,7 @@
    <!-- Bootstrap core JavaScript -->
    <script src="js/jquery/jquery.slim.min.js"></script>
    <script src="js/jquery/bootstrap.bundle.min.js"></script>
+   <script src="js/script.js"></script>
 
 </body>
 
