add toglle functionality + nested list

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
    <div class="navbar navbar-fixed-top">
       <ul class="nav  nav-stacked flex-column">
          <li class="nav-item" id="js-nav-item"><a class="rules nav-link active" href="#">
-               <div class="arrow" id="js-arrow"></div>Rules
+               <i class="arrow" id="js-arrow"></i>Rules
             </a></li>
          <li class="nav-item" id="js-nav-item"><a class="insights nav-link" href="#">
-               <div class="arrow" id="js-arrow"></div>Insights
+               <i class="arrow" id="js-arrow"></i>Insights
             </a></li>
       </ul>
    </div>
@@ -42,17 +42,29 @@
             <source src="assets/vid/main.mp4" />
          </video>
       </div>
-      <div class="row text">
+      <div class="row text ">
          <h3>Insight explores the trajectory between design education and professional practice.<br /><br />
             This platform serves as a collaborative collection of photographic and written insights', that document
             some of the underlying social factors shaping the design industry today, by the people that make it.</p>
       </div>
       <div class="row rules text">
          <ul class="nav">
-            <li class="nav-item"><i class="fa fa-arrow-right rotate"></i>10 Weeks</li>
-            <li class="nav-item"><i class="fa fa-arrow-right rotate"></i>10 Designers</li>
-            <li class="nav-item"><i class="fa fa-arrow-right rotate"></i>10 Disposable Cameras</li>
-            <li class="nav-item"><i class="fa fa-arrow-right rotate"></i>22 Photo Guidelines</li>
+            <li class="nav-item"><a class=" nav-link">
+                  <i class="arrow rotate"></i>10 Weeks</a>
+            </li>
+            <li class="nav-item"><a class=" nav-link">
+                  <i class="arrow rotate"></i>10 Designers </a>
+               <ul class="nested-list">
+                  <li><a><span class="number">1</span> videographer</a></li>
+                  <li><span class="number">3</span> service designers</li>
+               </ul>
+            </li>
+            <li class="nav-item"><a class=" nav-link">
+                  <i class="arrow rotate"></i>10 Disposable Cameras</a>
+            </li>
+            <li class="nav-item"><a class=" nav-link">
+                  <i class="arrow rotate"></i>22 Photo Guidelines</a>
+            </li>
 
          </ul>
       </div>
