--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
             <li class="nav-item"><a class=" nav-link">
                   <i class="arrow rotate"></i>10 Designers </a>
                <ul class="nested-list">
-                  <li><a><span class="number">1</span> videographer</a></li>
-                  <li><span class="number">3</span> service designers</li>
+                  <li><span class="number">1</span><a>videographer</a></li>
+                  <li><span class="number">3</span><a>service designers</a></li>
+                  <li><span class="number">1</span><a>typgrapher</a></li>
+                  <li><span class="number">1</span><a>illustrator</a></li>
+                  <li><span class="number">1</span><a>user experience</a></li>
+
                </ul>
             </li>
             <li class="nav-item"><a class=" nav-link">
