bit messy but top bar toggle works

--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
    <!-- Navigation -->
    <div class="navbar navbar-fixed-top">
       <ul class="nav  nav-stacked flex-column">
-         <li class="nav-item" id="js-nav-item"><a class="rules nav-link active" href="#">
+         <li class="nav-item active top-bar ">
+            <a class="rules nav-link" href="#">
                <i class="arrow" id="js-arrow"></i>Rules
-            </a></li>
-         <li class="nav-item" id="js-nav-item"><a class="insights nav-link" href="#">
-               <i class="arrow" id="js-arrow"></i>Insights
-            </a></li>
+            </a>
+         </li>
+         <li class="nav-item top-bar"">
+            <a class=" insights nav-link" href="#">
+            <i class="arrow" id="js-arrow"></i>Insights
+            </a>
+         </li>
       </ul>
    </div>
    <div class="navbar navbar-fixed-top right">
