--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
    <!-- Navigation -->
-   <div class="navbar navbar-fixed-top">
+   <div class="navbar navbar-fixed-top main">
       <ul class="nav  nav-stacked flex-column">
          <li class="nav-item active top-bar ">
             <a class="rules nav-link" href="#">
@@ -33,6 +33,8 @@
          </li>
       </ul>
    </div>
+
+
    <div class="navbar navbar-fixed-top right">
       <ul class="nav nav-stacked flex-column ">
          <li class="nav-item insight">Insight.</li>
