goes to links now + split up the scss

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
    <meta name="description" content="">
    <meta name="author" content="Hannahs and Katie">
 
-   <title>Invision</title>
+   <title>Insight</title>
 
    <!--CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
       integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/nav.css">
+   <link rel="stylesheet" href="css/rules.css">
 
 </head>
 
@@ -28,7 +29,7 @@
          </li>
          <li class="nav-item top-bar">
             <a class=" insights nav-link" href="insights.html">
-            <i class="arrow" id="js-arrow"></i>Insights
+               <i class="arrow" id="js-arrow"></i>Insights
             </a>
          </li>
       </ul>
