--- a/insights.html
+++ b/insights.html
@@ -15,6 +15,8 @@
       <link rel="stylesheet" href="css/nav.css">
       <link rel="stylesheet" href="css/insights.css">
 
+      <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
