--- a/insights.html
+++ b/insights.html
@@ -18,10 +18,11 @@
 </head>
 
 <body>
+
    <!-- Navigation -->
    <div class="navbar navbar-fixed-top main">
       <ul class="nav nav-stacked flex-column">
-         <li class="nav-item top-bar ">
+         <li class="nav-item top-bar">
             <a class="rules nav-link" href="index.html">
                <i class="arrow" id="js-arrow"></i>Rules
             </a>
@@ -33,6 +34,7 @@
          </li>
       </ul>
    </div>
+
 
 
    <div class="navbar navbar-fixed-top right logo">
@@ -103,6 +105,7 @@
 
          </ul>
       </div>
+      <a href="index.html">test</a>
 
 
 
