include 9 options in slider not 6

--- a/insights.html
+++ b/insights.html
@@ -107,30 +107,54 @@
             <div class="insights-content">
                   <ul class="hs">
                         <li class="item one">
+                              <div class="tag ux-designer"></div>
                               <div class="journal"></div>
                               <div class="photograph">
                               </div>
                         </li>
                         <li class="item two">
+                              <div class="tag typographer"></div>
                               <div class="journal "></div>
                               <div class="photograph"></div>
                         </li>
                         <li class="item three">
+                              <div class="tag service-designer"></div>
                               <div class="journal "></div>
                               <div class="photograph">
                               </div>
                         </li>
                         <li class="item four">
+                              <div class="tag ux-designer"></div>
                               <div class="journal"></div>
                               <div class="photograph">
                               </div>
                         </li>
                         <li class="item five">
+                              <div class="tag service-designer"></div>
                               <div class="journal"></div>
                               <div class="photograph">
                               </div>
                         </li>
                         <li class="item six">
+                              <div class="tag ux-designer"></div>
+                              <div class="journal"></div>
+                              <div class="photograph">
+                              </div>
+                        </li>
+                        <li class="item seven">
+                              <div class="tag service-designer"></div>
+                              <div class="journal"></div>
+                              <div class="photograph">
+                              </div>
+                        </li>
+                        <li class="item eight">
+                              <div class="tag typographer"></div>
+                              <div class="journal"></div>
+                              <div class="photograph">
+                              </div>
+                        </li>
+                        <li class="item six">
+                              <div class="tag creative"></div>
                               <div class="journal"></div>
                               <div class="photograph">
                               </div>
