--- a/insights.html
+++ b/insights.html
@@ -105,74 +105,65 @@
 
 
             <div class="insights-content">
-                  <ul class="hs">
-                        <li class="item one">
+                  <ul class="item-wrapper">
+                        <li class="item one ux-designer">
                               <div class="journal">
-                                    <div class="tag ux-designer">
-                                    </div>
+                                    <a class="tag" id="js-tag ux-designer">
+                                    </a>
                               </div>
                               <div class="photograph"></div>
-
                         </li>
-                        <li class="item two">
+                        <li class="item two typographer">
                               <div class="journal ">
-                                    <div class="tag typographer"></div>
+                                    <a class="tag" id="js-tag typographer"></a>
                               </div>
-
                               <div class="photograph"></div>
                         </li>
-                        <li class="item three">
-
+                        <li class="item three service-designer">
                               <div class="journal ">
-                                    <div class="tag service-designer"></div>
+                                    <a class="tag " id="js-tag service-designer"></a>
                               </div>
                               <div class="photograph">
                               </div>
                         </li>
-                        <li class="item four">
-
+                        <li class="item four ux-designer">
                               <div class="journal">
-                                    <div class="tag ux-designer"></div>
+                                    <a class="tag " id="js-tag ux-designer"></a>
                               </div>
                               <div class="photograph">
                               </div>
                         </li>
-                        <li class="item five">
-
+                        <li class="item five service-designer">
                               <div class="journal">
-                                    <div class="tag service-designer"></div>
+                                    <a class="tag " id="js-tag service-designer"></a>
                               </div>
                               <div class="photograph">
                               </div>
                         </li>
-                        <li class="item six">
-
+                        <li class="item six ux-designer">
                               <div class="journal">
-                                    <div class="tag ux-designer"></div>
+                                    <a class="tag" id="js-tag ux-designer"></a>
                               </div>
                               <div class="photograph">
                               </div>
                         </li>
-                        <li class="item seven">
-
+                        <li class="item seven service-designer">
                               <div class="journal">
-                                    <div class="tag service-designer"></div>
+                                    <a class="tag" id="js-tag service-designer"></a>
                               </div>
                               <div class="photograph">
                               </div>
                         </li>
-                        <li class="item eight">
-
+                        <li class="item eight typographer">
                               <div class="journal">
-                                    <div class="tag typographer"></div>
+                                    <a class="tag" id="js-tag typographer"></a>
                               </div>
                               <div class="photograph">
                               </div>
                         </li>
-                        <li class="item nine">
-
+                        <li class="item nine creative">
                               <div class="journal">
-                                    <div class="tag creative"></div>
+                                    <a class="tag" id="js-tag creative"></a>
                               </div>
                               <div class="photograph">
                               </div>
