shows sticky note via js

--- a/insights.html
+++ b/insights.html
@@ -102,7 +102,10 @@
 
                   </ul>
             </div>
-
+            <div class="sticky-note">
+                  <span class="paperclip">
+                  </span>
+            </div>
 
             <div class="insights-content">
                   <ul class="item-wrapper">
