add item wrapper wrapper back in

--- a/insights.html
+++ b/insights.html
@@ -108,8 +108,7 @@
             </div>
 
             <button id="rotateBtn">click</button>
-
-
+            <div class="insights-content">
                   <ul class="item-wrapper">
                         <li class="item one ux-designer holder">
                               <div class="journal ">
@@ -176,6 +175,7 @@
                   </ul>
             </div>
       </div>
+      </div>
 
       <!-- Bootstrap core JavaScript fontawesome-->
       <script src="https://use.fontawesome.com/5afd3d6e40.js"></script>
@@ -183,6 +183,6 @@
       <script src="js/jquery/bootstrap.bundle.min.js"></script>
       <script src="js/script.js"></script>
 
-   </body>
+</body>
 
 </html>
