insights-scroller on desktop fixed

--- a/insights.html
+++ b/insights.html
@@ -109,6 +109,8 @@
 
             <button id="rotateBtn">click</button>
 
+            <div class="insights-content">
+
 
                   <ul class="item-wrapper">
                         <li class="item one ux-designer holder">
@@ -174,6 +176,7 @@
                               </div>
                         </li>
                   </ul>
+               </div>
             </div>
       </div>
 
