--- a/insights.html
+++ b/insights.html
@@ -48,7 +48,7 @@
                         <li class="nav-item"><a class=" nav-link">
                                     <i class="arrow rotate"></i>First thing I do to start a day of designing</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li class="nav-item "><a class=" nav-link">
                                     <i class="arrow rotate"></i>What I miss most about studying</a>
                         </li>
                         <li class="nav-item"><a class=" nav-link">
@@ -111,66 +111,85 @@
             <div class="insights-content">
                   <ul class="item-wrapper">
                         <li class="item one ux-designer holder">
-                              <div class="journal ">
+                              <div class="info ">
+                                    <img class="journal">
+                                    </img>
                                     <a class="tag" id="js-tag ux-designer">
                                     </a>
                               </div>
-                              <div class="photograph current"></div>
+                              <img class="photograph current">
+                              </img>
                         </li>
                         <li class="item two typographer holder">
-                              <div class="journal ">
+                              <div class="info ">
+                                    <img class="journal">
+                                    </img>
                                     <a class="tag" id="js-tag typographer"></a>
                               </div>
-                              <div class="photograph current"></div>
+                              <img class="photograph current">
+                              </img>
                         </li>
                         <li class="item three service-designer holder">
-                              <div class="journal ">
+                              <div class="info ">
+                                    <img class="journal">
+                                    </img>
                                     <a class="tag " id="js-tag service-designer"></a>
                               </div>
-                              <div class="photograph current">
-                              </div>
+                              <img class="photograph current"> </img>
                         </li>
                         <li class="item four ux-designer holder">
-                              <div class="journal">
+                              <div class="info ">
+                                    <img class="journal">
+                                    </img>
                                     <a class="tag " id="js-tag ux-designer"></a>
                               </div>
-                              <div class="photograph current">
-                              </div>
+                              <img class="photograph current">
+                              </img>
                         </li>
                         <li class="item five service-designer holder">
-                              <div class="journal">
+                              <div class="info ">
+                                    <img class="journal">
+                                    </img>
                                     <a class="tag " id="js-tag service-designer"></a>
                               </div>
-                              <div class="photograph current">
-                              </div>
+                              <img class="photograph current">
+                              </img>
                         </li>
                         <li class="item six ux-designer holder">
-                              <div class="journal">
+                              <div class="info ">
+                                    <img class="journal">
+                                    </img>
                                     <a class="tag" id="js-tag ux-designer"></a>
                               </div>
-                              <div class="photograph current">
-                              </div>
+                              <img class="photograph current">
+                              </img>
                         </li>
                         <li class="item seven service-designer holder">
-                              <div class="journal">
+                              <div class="info ">
+                                    <img class="journal">
+                                    </img>
                                     <a class="tag" id="js-tag service-designer"></a>
                               </div>
-                              <div class="photograph current">
-                              </div>
+                              <img class="photograph current">
+                              </img>
                         </li>
                         <li class="item eight typographer holder">
-                              <div class="journal">
+                              <div class="info ">
+                                    <img class="journal">
+                                    </img>
                                     <a class="tag" id="js-tag typographer"></a>
                               </div>
-                              <div class="photograph current">
-                              </div>
+                              <img class="photograph current">
+                              </img>
                         </li>
                         <li class="item nine creative holder">
-                              <div class="journal">
+                              <div class="info ">
+                                    <img class="journal">
+                                    </img>
                                     <a class="tag" id="js-tag creative"></a>
                               </div>
-                              <div class="photograph current">
-                              </div>
+                              <img class="photograph current">
+                              </img>
                         </li>
                   </ul>
             </div>
@@ -182,6 +201,7 @@
       <script src="js/jquery/jquery.slim.min.js"></script>
       <script src="js/jquery/bootstrap.bundle.min.js"></script>
       <script src="js/script.js"></script>
+      <script src="js/script.1.js"></script>
 
 </body>
 
