--- a/insights.html
+++ b/insights.html
@@ -45,58 +45,58 @@
       <div class="container">
             <div class="row insights-titles">
                   <ul class="nav parent">
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="1" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>First thing I do to start a day of designing</a>
                         </li>
-                        <li class="nav-item "><a class=" nav-link">
+                        <li id="2" class="nav-item guideline "><a class=" nav-link">
                                     <i class="arrow rotate"></i>What I miss most about studying</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="3" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>I'm interupted by</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="4" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>Most helpful designer 'tool'</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="5" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>My shoes I wear most often to work</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="6" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>My favourite distraction in the workplace</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="7" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>I hate it when</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="8" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>How I fill my time post work</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="9" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>I feel supported when</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="10" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>First thing I do to start a day of designing</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="11" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>What I miss most about studying</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="12" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>I'm interupted by</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="13" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>Most helpful designer 'tool'</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="14" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>My shoes I wear most often to work</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="15" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>My favourite distraction in the workplace</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="16" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>I hate it when</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="17" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>How I fill my time post work</a>
                         </li>
-                        <li class="nav-item"><a class=" nav-link">
+                        <li id="18" class="nav-item guideline"><a class=" nav-link">
                                     <i class="arrow rotate"></i>I feel supported when</a>
                         </li>
 
