--- a/insights.html
+++ b/insights.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+      <link rel="shortcut icon" type="image/x-icon" href="assets/icons/favicon.png" />
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="">
