rotate btn changed to icon

--- a/insights.html
+++ b/insights.html
@@ -107,7 +107,7 @@
                   <span class="paperclip">
                   </span>
             </div>
-            <button id="rotateBtn">click</button>
+            <button id="rotateBtn"><i class="fa fa-refresh rotateIcon"></i></button>
             <div class="insights-content">
                   <ul class="item-wrapper">
                         <li class="item one ux-designer holder">
