--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row rules text">
          <ul class="nav">
             <li class="nav-item"><a class=" nav-link">
-                  <i class="arrow rotate"></i>1 Weeks</a>
+                  <i class="arrow rotate"></i>1 Week</a>
             </li>
             <li class="nav-item"><a class=" nav-link">
                   <i class="arrow rotate"></i>10 Designers </a>
@@ -67,7 +67,6 @@
                   <li><span class="number">1</span><a>typgrapher</a></li>
                   <li><span class="number">1</span><a>illustrator</a></li>
                   <li><span class="number">3</span><a>user experience</a></li>
-
                </ul>
             </li>
             <li class="nav-item"><a class=" nav-link">
@@ -75,6 +74,9 @@
             </li>
             <li class="nav-item"><a class=" nav-link">
                   <i class="arrow rotate"></i>22 Photo Guidelines</a>
+               <ul class="nested-list guidelines-list">
+                  <li><img class="guideline-photo" src="assets/Images/guidelines.png"></img></li>
+               </ul>
             </li>
 
          </ul>
