greyed out text for rules

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
    <!-- Page Content -->
    <div class="container">
       <div class="row">
+         <!--can just add word 'autoplay' to this but maybe do it later so its not annoying when in dev-->
          <video preload="" controls="controls" width="100%" height="100%">
             <source src="assets/vid/main.mp4" />
          </video>
@@ -70,10 +71,10 @@
                </ul>
             </li>
             <li class="nav-item"><a class=" nav-link">
-                  <i class="arrow rotate"></i>10 Disposable Cameras</a>
+                  <i class="arrow rotate"></i>10 Disposable cameras</a>
             </li>
             <li class="nav-item"><a class=" nav-link">
-                  <i class="arrow rotate"></i>22 Photo Guidelines</a>
+                  <i class="arrow rotate"></i>22 Photo guidelines</a>
                <ul class="nested-list guidelines-list">
                   <li><img class="guideline-photo" src="assets/Images/guidelines.png"></img></li>
                </ul>
