--- a/insights.html
+++ b/insights.html
@@ -202,7 +202,7 @@
       <script src="js/jquery/jquery.slim.min.js"></script>
       <script src="js/jquery/bootstrap.bundle.min.js"></script>
       <script src="js/script.js"></script>
-      <script src="js/script.1.js"></script>
+      <script src="js/images.js"></script>
 
 </body>
 
