make guidelines work a bit better

--- a/insights.html
+++ b/insights.html
@@ -196,14 +196,14 @@
             </div>
       </div>
       </div>
-
       <!-- Bootstrap core JavaScript fontawesome-->
       <script src="https://use.fontawesome.com/5afd3d6e40.js"></script>
       <script src="js/jquery/jquery.slim.min.js"></script>
       <script src="js/jquery/bootstrap.bundle.min.js"></script>
+
+      <!-- custom javascript -->
       <script src="js/script.js"></script>
       <script src="js/images.js"></script>
-
 </body>
 
 </html>
