stylings to insight pages
text that has been clicked on from guidelines now shows at top. add visited class to clicked guidelines to stay greyed out.

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
       </div>
       <div class="row rules text">
          <ul class="nav">
-            <li class="nav-item"><a class=" nav-link">
+            <li class="nav-item index"><a class=" nav-link">
                   <i class="arrow rotate"></i>1 Week</a>
             </li>
-            <li class="nav-item"><a class=" nav-link">
+            <li class="nav-item index"><a class=" nav-link">
                   <i class="arrow rotate"></i>10 Designers </a>
                <ul class="nested-list">
                   <li><span class="number">1</span><a>videographer</a></li>
@@ -70,10 +70,10 @@
                   <li><span class="number">3</span><a>user experience</a></li>
                </ul>
             </li>
-            <li class="nav-item"><a class=" nav-link">
+            <li class="nav-item index"><a class=" nav-link">
                   <i class="arrow rotate"></i>10 Disposable cameras</a>
             </li>
-            <li class="nav-item"><a class=" nav-link">
+            <li class="nav-item index"><a class=" nav-link">
                   <i class="arrow rotate"></i>22 Photo guidelines</a>
                <ul class="nested-list guidelines-list">
                   <li><img class="guideline-photo" src="assets/Images/guidelines.png"></img></li>
