--- a/insights.html
+++ b/insights.html
@@ -46,8 +46,7 @@
       <div class="container">
             <div class="row insights-titles">
                   <ul class="nav parent">
-                        <li id="0" class="nav-item guideline active-guideline"><a
-                                    class="nav-link active-guideline-link">
+                        <li id="0" class="nav-item active-guideline"><a class="nav-link active-guideline-link">
                                     <i class="arrow rotate"></i><span
                                           class="active-guideline-link-text">&nbsp;</span></a>
                         </li>
