--- a/insights.html
+++ b/insights.html
@@ -46,6 +46,10 @@
       <div class="container">
             <div class="row insights-titles">
                   <ul class="nav parent">
+                        <li id="0" class="nav-item active-guideline"><a class="nav-link active-guideline-link">
+                                    <i class="arrow rotate"></i><span
+                                          class="active-guideline-link-text">&nbsp;</span></a>
+                        </li>
                         <li id="1" class="nav-item guideline "><a class=" nav-link">
                                     <i class="arrow rotate"></i>First thing I do to start a day of designing</a>
                         </li>
@@ -138,21 +142,21 @@
                                     <a class="tag " id="js-tag service-designer"></a>
                               </div>
                               <div class="photograph-wrapper current">
-                                 <img class="photograph"> </img>
+                                    <img class="photograph"> </img>
                               </div>
                         </li>
 
 
                         <li class="item four ux-designer holder">
-                           <div class="info journal-wrapper">
-                                 <img class="journal">
-                                 </img>
-                                 <a class="tag " id="js-tag ux-designer"></a>
-                           </div>
-                           <div class="photograph-wrapper current">
-                              <img class="photograph">
-                              </img>
-                           </div>
+                              <div class="info journal-wrapper">
+                                    <img class="journal">
+                                    </img>
+                                    <a class="tag " id="js-tag ux-designer"></a>
+                              </div>
+                              <div class="photograph-wrapper current">
+                                    <img class="photograph">
+                                    </img>
+                              </div>
 
                         </li>
                         <li class="item five service-designer holder">
