--- a/insights.html
+++ b/insights.html
@@ -115,107 +115,113 @@
             <div class="insights-content">
                   <ul class="item-wrapper">
                         <li class="item one ux-designer holder">
-                              <div class="info journal-wrapper">
+                              <div class=" journal-wrapper">
                                     <img class="journal"></img>
-                                    <a class="tag" id="js-tag ux-designer"></a>
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph"></img>
+                                    <a class="tag" id="js-tag ux-designer"></a>
                               </div>
                         </li>
                         <li class="item two typographer holder">
-                              <div class="info journal-wrapper">
+                              <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
-                                    <a class="tag" id="js-tag typographer"></a>
+
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
+                                    <a class="tag" id="js-tag typographer"></a>
                               </div>
 
                         </li>
                         <li class="item three service-designer holder">
-                              <div class="info journal-wrapper">
+                              <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
-                                    <a class="tag " id="js-tag service-designer"></a>
+
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph"> </img>
+                                    <a class="tag " id="js-tag service-designer"></a>
                               </div>
                         </li>
 
 
                         <li class="item four ux-designer holder">
-                              <div class="info journal-wrapper">
+                              <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
-                                    <a class="tag " id="js-tag ux-designer"></a>
+
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
+                                    <a class="tag " id="js-tag ux-designer"></a>
                               </div>
 
                         </li>
                         <li class="item five service-designer holder">
-                              <div class="info journal-wrapper">
+                              <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
-                                    <a class="tag " id="js-tag service-designer"></a>
+
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
+                                    <a class="tag " id="js-tag service-designer"></a>
                               </div>
 
                         </li>
                         <li class="item six ux-designer holder">
-                              <div class="info journal-wrapper">
+                              <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
-                                    <a class="tag" id="js-tag ux-designer"></a>
+
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
+                                    <a class="tag" id="js-tag ux-designer"></a>
                               </div>
 
                         </li>
                         <li class="item seven service-designer holder">
-                              <div class="info journal-wrapper">
+                              <div class="journal-wrapper">
                                     <img class="journal">
+                                    </img>
+
+                              </div>
+                              <div class="photograph-wrapper current">
+                                    <img class="photograph">
                                     </img>
                                     <a class="tag" id="js-tag service-designer"></a>
                               </div>
-                              <div class="photograph-wrapper current">
-                                    <img class="photograph">
-                                    </img>
-                              </div>
-
                         </li>
                         <li class="item eight typographer holder">
-                              <div class="info journal-wrapper">
+                              <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
-                                    <a class="tag" id="js-tag typographer"></a>
+
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
+                                    <a class="tag" id="js-tag typographer"></a>
                               </div>
 
                         </li>
                         <li class="item nine creative holder">
-                              <div class="info journal-wrapper">
+                              <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
-                                    <a class="tag" id="js-tag creative"></a>
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
+                                    <a class="tag" id="js-tag creative"></a>
                               </div>
 
                         </li>
