added empty div at start of scroller

--- a/insights.html
+++ b/insights.html
@@ -113,14 +113,9 @@
             <button id="rotateBtn"><i class="fa fa-refresh rotateIcon"></i></button>
             <div class="insights-content">
                   <ul class="item-wrapper">
-                        <li class="item one ux-designer holder">
-                              <div class=" journal-wrapper">
-                                    <img class="journal"></img>
-                              </div>
-                              <div class="photograph-wrapper current">
-                                    <img class="photograph"></img>
-                                    <a class="tag" id="js-tag ux-designer"></a>
-                              </div>
+
+                        <li class="item nopointer">
+
                         </li>
                         <li class="item two typographer holder">
                               <div class=" journal-wrapper">
