--- a/insights.html
+++ b/insights.html
@@ -110,19 +110,21 @@
                   <span class="paperclip">
                   </span>
             </div>
-            <button id="rotateBtn"><i class="fa fa-refresh rotateIcon"></i></button>
+            <button id="rotateBtn"></button>
             <div class="insights-content">
                   <ul class="item-wrapper">
                         <li class="item one ux-designer holder">
+                              <a class="tag" id="js-tag ux-designer"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal"></img>
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph"></img>
-                                    <a class="tag" id="js-tag ux-designer"></a>
+
                               </div>
                         </li>
                         <li class="item two typographer holder">
+                              <a class="tag" id="js-tag typographer"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -130,20 +132,21 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag" id="js-tag typographer"></a>
                               </div>
                         </li>
                         <li class="item three service-designer holder">
+                              <a class="tag " id="js-tag service-designer"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph"> </img>
-                                    <a class="tag " id="js-tag service-designer"></a>
+
                               </div>
                         </li>
                         <li class="item four ux-designer holder">
+                              <a class="tag " id="js-tag ux-designer"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -151,11 +154,12 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag " id="js-tag ux-designer"></a>
+
                               </div>
 
                         </li>
                         <li class="item five service-designer holder">
+                              <a class="tag " id="js-tag service-designer"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -164,10 +168,11 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag " id="js-tag service-designer"></a>
+
                               </div>
                         </li>
                         <li class="item six ux-designer holder">
+                              <a class="tag" id="js-tag ux-designer"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -175,10 +180,11 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag" id="js-tag ux-designer"></a>
+
                               </div>
                         </li>
                         <li class="item seven service-designer holder">
+                              <a class="tag" id="js-tag service-designer"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -186,10 +192,11 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag" id="js-tag service-designer"></a>
+
                               </div>
                         </li>
                         <li class="item eight typographer holder">
+                              <a class="tag" id="js-tag typographer"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -197,10 +204,11 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag" id="js-tag typographer"></a>
+
                               </div>
                         </li>
                         <li class="item nine creative holder">
+                              <a class="tag" id="js-tag creative"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -208,7 +216,7 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag" id="js-tag creative"></a>
+
                               </div>
                         </li>
                   </ul>
