Subtags added - not dynamic

--- a/insights.html
+++ b/insights.html
@@ -114,10 +114,9 @@
             <div class="insights-content">
                   <ul class="item-wrapper">
 
-                        <li class="item nopointer">
+                        <li class="item nopointer"></li>
 
-                        </li>
-                        <li class="item two typographer holder">
+                        <li class="item two typographer inhouse holder">
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -126,9 +125,10 @@
                                     <img class="photograph">
                                     </img>
                                     <a class="tag" id="js-tag typographer"></a>
+                                    <a class="subtag" id="js-subtag inhouse"></a>
                               </div>
                         </li>
-                        <li class="item three service-designer holder">
+                        <li class="item three service-designer agency holder">
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -136,9 +136,10 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph"> </img>
                                     <a class="tag " id="js-tag service-designer"></a>
+                                    <a class="subtag" id="js-subtag agency"></a>
                               </div>
                         </li>
-                        <li class="item four ux-designer holder">
+                        <li class="item four ux-designer freelance holder">
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -147,10 +148,11 @@
                                     <img class="photograph">
                                     </img>
                                     <a class="tag " id="js-tag ux-designer"></a>
+                                    <a class="subtag" id="js-subtag freelance"></a>
                               </div>
 
                         </li>
-                        <li class="item five service-designer holder">
+                        <li class="item five service-designer inhouse holder">
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -160,9 +162,10 @@
                                     <img class="photograph">
                                     </img>
                                     <a class="tag " id="js-tag service-designer"></a>
+                                    <a class="subtag" id="js-subtag inhouse"></a>
                               </div>
                         </li>
-                        <li class="item six ux-designer holder">
+                        <li class="item six ux-designer agency holder">
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -171,9 +174,10 @@
                                     <img class="photograph">
                                     </img>
                                     <a class="tag" id="js-tag ux-designer"></a>
+                                    <a class="subtag" id="js-subtag agency"></a>
                               </div>
                         </li>
-                        <li class="item seven service-designer holder">
+                        <li class="item seven service-designer freelance holder">
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -182,9 +186,10 @@
                                     <img class="photograph">
                                     </img>
                                     <a class="tag" id="js-tag service-designer"></a>
+                                    <a class="subtag" id="js-subtag freelance"></a>
                               </div>
                         </li>
-                        <li class="item eight typographer holder">
+                        <li class="item eight typographer inhouse holder">
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -193,9 +198,10 @@
                                     <img class="photograph">
                                     </img>
                                     <a class="tag" id="js-tag typographer"></a>
+                                    <a class="subtag" id="js-subtag inhouse"></a>
                               </div>
                         </li>
-                        <li class="item nine creative holder">
+                        <li class="item nine creative agency holder">
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -204,6 +210,7 @@
                                     <img class="photograph">
                                     </img>
                                     <a class="tag" id="js-tag creative"></a>
+                                    <a class="subtag" id="js-subtag agency"></a>
                               </div>
                         </li>
                   </ul>
